--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -33,13 +33,13 @@
             #else
             <a href="/user/$!{user.id}" class="zu-top-nav-userinfo " id=":0" role="button" aria-haspopup="true" aria-activedescendant="">
                 <span class="name">$!{user.name}</span>
-                <img class="Avatar" src="$!{user.headUrl}" alt="$!{user.name}">  <!--显示用户名和头像 -->
+                <img class="Avatar" src="$!{user.headUrl}" alt="$!{user.name}">
                     <span id="zh-top-nav-new-pm" class="zg-noti-number zu-top-nav-pm-count" style="visibility:hidden" data-count="0">
                     </span>
             </a>
             <ul class="top-nav-dropdown" id="top-nav-profile-dropdown" aria-labelledby=":0">
                 <li>
-                    <a href="/user/$!{user.id}" tabindex="-1" id=":1">  <!-- 可以跳到我的主页-->
+                    <a href="/user/$!{user.id}" tabindex="-1" id=":1">
                         <i class="zg-icon zg-icon-dd-home"></i>我的主页
                     </a>
                 </li>
