--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -22,12 +22,12 @@
             <div id="zh-question-title" data-editable="true" class="zm-editable-status-normal">
                 <h2 class="zm-item-title">
 
-                    <span class="zm-editable-content">$!{question.title}</span>
+                    <span class="zm-editable-content">$!{question.title}</span> <!--问题标题-->
 
                 </h2>
             </div>
             <div id="zh-question-detail" class="zm-item-rich-text zm-editable-status-normal">
-                <div class="zm-editable-content">$!{question.content}</div>
+                <div class="zm-editable-content">$!{question.content}</div> <!--问题内容-->
             </div>
             <div class="zm-side-section">
                 <div class="zm-side-section-inner" id="zh-question-side-header-wrap">
