--- a/src/main/resources/templates/letter.html
+++ b/src/main/resources/templates/letter.html
@@ -5,18 +5,18 @@
             <ul class="letter-list">
                 #foreach ($conversation in $conversations)
                 <li id="conversation-item-10001_622873">
-                <a class="letter-link" href="/msg/detail?conversationId=$conversation.conversation.conversationId">
+                <a class="letter-link" href="/msg/detail?conversationId=$conversation.message.conversationId">
                 </a>
                 <div class="letter-info">
-                <span class="l-time">$date.format('yyyy-MM-dd HH:mm:ss', $conversation.conversation.createdDate)</span>
+                <span class="l-time">$date.format('yyyy-MM-dd HH:mm:ss', $conversation.message.createdDate)</span>
                 <div class="l-operate-bar">
                     <!--
                 <a href="javascript:void(0);" class="sns-action-del" data-id="10001_622873">
                 删除
                 </a>
                 -->
-                <a href="/msg/detail?conversationId=$conversation.conversation.conversationId">
-                    $conversation.conversation.id
+                <a href="/msg/detail?conversationId=$conversation.message.conversationId">
+                    $conversation.message.id
                 </a>
                 </div>
                 </div>
@@ -29,12 +29,12 @@
                 </a>
                 </div>
                 <div class="letter-detail">
-                <a title="$conversation.user.name" class="letter-name level-color-1">
+                <a title="$conversation.user.name" class="letter-name level-color-1"><!--可在此添加href，跳转到用户主页-->
                     $conversation.user.name
                 </a>
                 <p class="letter-brief">
-                <a href="/msg/detail?conversationId=$conversation.conversation.conversationId">
-                $conversation.conversation.content
+                <a href="/msg/detail?conversationId=$conversation.message.conversationId">
+                $conversation.message.content
                 </a>
                 </p>
                 </div>
